[package]
name = "TBTE"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { version = "0.1.0", git = "https://github.com/SoraSuegami/rust-kzg.git" }
rust-kzg-blst = { version = "0.1.0", git = "https://github.com/SoraSuegami/rust-kzg.git" }
# kzg = { version = "0.1.0", path = "/Users/suegamisora/codes/rust-kzg/kzg" }
# rust-kzg-blst = { version = "0.1.0", path = "/Users/suegamisora/codes/rust-kzg/blst" }
thiserror = "1.0.61"
blst = "0.3.12"
itertools = "0.13.0"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.4"
ark-std = { version = "0.4.0", features = ["print-trace"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "kzg_tbte"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
